--- a/index.html
+++ b/index.html
@@ -21,5 +21,11 @@
    <input type="button" style="width: 940px; height: 870px; font-size: 70px; background-color: rgb(177, 95, 111)" value="Tıklama Bana" onclick="document.write('Hack Has Been Absorbed')+show_image('https://cdn0.iconfinder.com/data/icons/businessman-icons-set-cartoon-style/512/a1129-512.png',512,512,'You are not Hacked');"/>
 
 
-
 </body>
+<footer>
+
+<script>
+   
+document.writeln("Copyrighted © By HACKLENDİN.AŞ 2019");
+</script>
+</footer>
