--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <head>
-     
+    <link rel="shortcut icon" href="https://quickabdest.com/index_files/favicon.ico">
       </head>
-<body>
+<body class="dark" style>
 
    <script>
    function show_image(src,width,height,alt){
@@ -26,6 +26,6 @@
 
 <script>
    
-document.writeln("Copyrighted © By HACKLENDİN.AŞ 2019");
+document.writeln("Copyrighted © By CursedField 2019");
 </script>
 </footer>
