--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <link rel="shortcut icon" href="https://quickabdest.com/index_files/favicon.ico">
+    <link rel="shortcut icon" href="img/Hospital_Sign-512.png">
       </head>
 <body class="dark" style>
 
