Revert "changed image"
This reverts commit d3256cec07996de5c42ab64b4800609d9a84aa19.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <link rel="shortcut icon" href="img/Hospital_Sign-512.png">
+    <link rel="shortcut icon" href="https://quickabdest.com/index_files/favicon.ico">
       </head>
 <body class="dark" style>
 
