--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <head>
-        <img src="img/hack.png" alt="Başlık" height="60" width="240">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <style>
+            body{background-color: rgb(119, 197, 191)}
+        img {
+
+          display: block;
+          margin-left: auto;
+          margin-right: auto;
+        }
+        </style>
+        <img  src="img/hack.png" alt="Başlık" style="width:15%;">
 
     <link rel="shortcut icon" href="img/Hospital_Sign-512.png">
       </head>
